<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/association_detal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".associations.AssociationDetailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:src="@drawable/association_default_icon"
        android:background="@color/light_gray"
        />


    <TextView
        android:layout_marginTop="20sp"
        android:layout_marginStart="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_nom_asso"
        android:text="@string/title_nom_asso_default_text"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        />

    <TextView
        android:layout_marginStart="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subtitle_contact_asso"
        android:text="@string/subtitle_contact_text"
        android:textSize="12sp"
        />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        app:cardCornerRadius="10sp"
        android:padding="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/desc_asso"
            android:text="@string/desc_asso_default_text"
            android:padding="10sp"
            />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:lineBreakStyle="strict"
        />

    <TextView
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/association_detail_question_montant"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textStyle="bold"
        />


    <EditText
        android:layout_marginTop="30sp"
        android:layout_width="match_parent"
        android:layout_marginStart="100sp"
        android:layout_marginEnd="100sp"
        android:layout_height="wrap_content"
        android:text="@string/bar_montant_don"
        android:textStyle="italic"
        android:background="@android:drawable/edit_text"
        android:gravity="center"
        />



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60sp"
        app:cardCornerRadius="10sp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:id="@+id/btn_valider_don"
            android:text="@string/btn_valider_don_text"
            android:textSize="20sp"
            android:textAllCaps="true"
            />

    </androidx.cardview.widget.CardView>




</LinearLayout>