<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".login.ForgotPasswordActivity">

    <!-- Titre de la page de modification du mot de passe -->
    <TextView
        android:id="@+id/textViewConnexionTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Modification du mot de passe"
        android:background="@color/violetPrimary"
        android:padding="25dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp" />

    <!-- Formulaire centré -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_marginBottom="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/nouveau_mot_au_passe"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/confirmer_le_nouveau_mot_de_passe"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/buttonValide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/violetPrimary"
            android:padding="12dp"
            android:text="@string/valider"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonRetour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/violetPrimary"
            android:padding="12dp"
            android:text="@string/retour"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
