<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:layout_marginStart="15sp"
    android:layout_marginEnd="15sp"
    >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="15dp"
      >

    <TextView
        android:id="@+id/association_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/association_nom"/>

<!--    <TextView-->
<!--        android:id="@+id/resident_floor"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="10dp"-->
<!--        android:textAllCaps="true"-->
<!--        android:textSize="15sp"-->
<!--        android:text="@string/resident_default_floor"-->
<!--        android:layout_alignParentEnd="true"/>-->

    <TextView
        android:id="@+id/association_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/desc_asso_default_text"
        android:layout_below="@id/association_nom"/>

    <TextView
        android:layout_marginTop="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/association_desc"
        android:id="@+id/association_theme"
        android:textStyle="italic"
        android:text="@string/association_theme"
        />
  </RelativeLayout>

</androidx.cardview.widget.CardView>
